--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -860,30 +860,98 @@ footer {
 
 .news_page_list {
   li {
-    width: 100%;
-    border-bottom: 1px solid #000;
-    padding: 20px 0;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    padding: 20px 10%;
+    margin: 20px 0;
     list-style: none;
     border-collapse: collapse;
     transition: all 0.3s;
-    &:hover {
-      background: rgb(223, 224, 211);
+    background: #fff;
+    border-radius: 20px;
+    p {
+      font-size: 1.7rem;
+      margin: 0;
     }
-    &:first-child {
-      border-top: 1px solid #000;
+  }
+
+  .news_link_btn {
+    color: #fff;
+    position: relative;
+    margin: 10px 0;
+    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    height: 50px;
+    background: rgb(69, 36, 0);
+    font-size: 2rem;
+    border-radius: 10px;
+    transition: all 0.2s;
+    &:hover {
+      opacity: 0.7;
+    }
+    a {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      color: #fff;
     }
   }
   h2 {
-    font-size: 2rem;
+    padding-bottom: 10px;
+    font-size: 2.7rem;
+    margin: 0;
+    border-bottom: 2px solid rgb(69, 36, 0);
     @include m.mq(sp) {
       font-size: 1.6rem;
     }
     span {
-      font-size: 1.5rem;
+      padding-bottom: 20px;
+      font-size: 1.4rem;
       text-align: right;
       @include m.mq(sp) {
         font-size: 1.3rem;
       }
+    }
+  }
+}
+.pagination {
+  ul {
+    li {
+      position: relative;
+      margin: 30px 0.5%;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #341801;
+      background: rgb(69, 36, 0);
+      border-radius: 50%;
+      transition: all 0.2s;
+      &:hover {
+        opacity: 0.7;
+      }
+      a {
+        transform: translateY(50%);
+        top: -20%;
+        text-align: center;
+        vertical-align: middle;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        color: #fff;
+      }
+    }
+    .active {
+      background: #fff;
+      color: rgb(69, 36, 0);
     }
   }
 }
