--- a/wp-content/themes/tensha/css/_main.scss
+++ b/wp-content/themes/tensha/css/_main.scss
@@ -873,7 +873,7 @@ footer {
     width: 80%;
   }
   @include m.mq(sp) {
-    width: 95%;
+    width: 90%;
     padding: 20px 2.5%;
   }
   h1 {
@@ -1029,6 +1029,8 @@ footer {
   }
 }
 .prev_next {
+  display: flex;
+  justify-content: space-between;
   margin: 70px auto;
   width: 75%;
   max-width: 550px;
@@ -1044,15 +1046,18 @@ footer {
   }
   .prev {
     width: 30%;
+    height: 40px;
     max-width: 150px;
     position: relative;
     border-radius: 10px;
     padding: 5px 0;
     background-color: rgb(69, 36, 0);
-    margin-right: auto;
     text-align: center;
     color: #fff;
     transition: all 0.2s;
+    @include m.mq(sp) {
+      height: 30px;
+    }
     &:hover {
       opacity: 0.7;
     }
@@ -1061,7 +1066,7 @@ footer {
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      padding: 7px 0;
       color: #fff;
     }
     @include m.mq(sp) {
@@ -1072,8 +1077,8 @@ footer {
     }
   }
   .next {
-    margin-left: auto;
     width: 30%;
+    height: 40px;
     max-width: 150px;
     position: relative;
     border-radius: 10px;
@@ -1082,6 +1087,9 @@ footer {
     text-align: center;
     color: #fff;
     transition: all 0.2s;
+    @include m.mq(sp) {
+      height: 30px;
+    }
     &:hover {
       opacity: 0.7;
     }
@@ -1090,7 +1098,7 @@ footer {
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      padding: 7px 0;
       color: #fff;
     }
     @include m.mq(sp) {
@@ -1101,19 +1109,29 @@ footer {
     }
   }
   .back_page {
+    height: 40px;
     width: 30%;
     max-width: 150px;
-
+    position: relative;
     text-align: center;
     border-radius: 10px;
     padding: 5px 0;
+    margin-left: 2%;
+    margin-right: 2%;
     background-color: rgb(69, 36, 0);
-    margin: auto;
     transition: all 0.2s;
+    @include m.mq(sp) {
+      height: 30px;
+    }
     &:hover {
       opacity: 0.7;
     }
     a {
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
+      padding: 7px 0;
       color: #fff;
     }
     @include m.mq(sp) {
