--- a/wp-content/themes/tensha/css/style.css
+++ b/wp-content/themes/tensha/css/style.css
@@ -1348,7 +1348,7 @@ footer .f_link img {
 }
 @media screen and (max-width: 768px) {
   .news_one {
-    width: 95%;
+    width: 90%;
     padding: 20px 2.5%;
   }
 }
@@ -1522,6 +1522,8 @@ footer .f_link img {
 }
 
 .prev_next {
+  display: flex;
+  justify-content: space-between;
   margin: 70px auto;
   width: 75%;
   max-width: 550px;
@@ -1542,15 +1544,20 @@ footer .f_link img {
 }
 .prev_next .prev {
   width: 30%;
+  height: 40px;
   max-width: 150px;
   position: relative;
   border-radius: 10px;
   padding: 5px 0;
   background-color: rgb(69, 36, 0);
-  margin-right: auto;
   text-align: center;
   color: #fff;
   transition: all 0.2s;
+}
+@media screen and (max-width: 768px) {
+  .prev_next .prev {
+    height: 30px;
+  }
 }
 .prev_next .prev:hover {
   opacity: 0.7;
@@ -1560,7 +1567,7 @@ footer .f_link img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  padding: 7px 0;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
@@ -1572,8 +1579,8 @@ footer .f_link img {
   }
 }
 .prev_next .next {
-  margin-left: auto;
   width: 30%;
+  height: 40px;
   max-width: 150px;
   position: relative;
   border-radius: 10px;
@@ -1583,6 +1590,11 @@ footer .f_link img {
   color: #fff;
   transition: all 0.2s;
 }
+@media screen and (max-width: 768px) {
+  .prev_next .next {
+    height: 30px;
+  }
+}
 .prev_next .next:hover {
   opacity: 0.7;
 }
@@ -1591,7 +1603,7 @@ footer .f_link img {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  padding: 7px 0;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
@@ -1603,19 +1615,32 @@ footer .f_link img {
   }
 }
 .prev_next .back_page {
+  height: 40px;
   width: 30%;
   max-width: 150px;
+  position: relative;
   text-align: center;
   border-radius: 10px;
   padding: 5px 0;
+  margin-left: 2%;
+  margin-right: 2%;
   background-color: rgb(69, 36, 0);
-  margin: auto;
   transition: all 0.2s;
+}
+@media screen and (max-width: 768px) {
+  .prev_next .back_page {
+    height: 30px;
+  }
 }
 .prev_next .back_page:hover {
   opacity: 0.7;
 }
 .prev_next .back_page a {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  padding: 7px 0;
   color: #fff;
 }
 @media screen and (max-width: 768px) {
